# SGNO

./: LICENSE  README.md  pyproject.toml  sgno (1).py
configs/: example_1d.json  example_2d.json  example_3d.json
scripts/: eval_npz.py  sanity_check.py  train_npz.py
src/sgno/: __init__.py  sgno.py
tests/: test_forward.py
