[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgno"
version = "0.1.0"
description = "Spectral Generator Neural Operator in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy"]
keywords = ["neural-operator", "pde", "fourier", "etd"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
